# ml-template-repo

./: .gitignore  Dockerfile  README.md  pod.yml  pyproject.toml
.github/workflows/: batch_prediction.yml  deploy.yml
cleaning/: events_clean.py
prediction_service/: main.py
scripts/: run_workflow.bash
tests/: test_shapes.py
utils/: decorators.py  dir_utils.py
