[tool.poetry]
name = "ml-template-repo"
version = "0.1.0"
description = ""
authors = ["mohit sharma <mohitlakshya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
jose = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"


[tool.poetry.group.diagrams.dependencies]
diagrams = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
